fixed gaps

--- a/src/components/invite_friends/invite_friends.module.less
+++ b/src/components/invite_friends/invite_friends.module.less
@@ -127,7 +127,7 @@
 .container450_485 {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 20px;
   background-color: black;
   border-radius: 28px;
   padding: 13px 0 27px 28px;
@@ -142,7 +142,7 @@
       font-weight: 600;
     }
     img {
-      width: 9px;
+      width: 7px;
     }
   }
   .mainText {
@@ -158,7 +158,7 @@
 .container410_450 {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 20px;
   background-color: black;
   border-radius: 28px;
   padding: 13px 0 27px 28px;
@@ -173,7 +173,7 @@
       font-weight: 600;
     }
     img {
-      width: 9px;
+      width: 7px;
     }
   }
   .mainText {
@@ -189,7 +189,7 @@
 .container375_410 {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 20px;
   background-color: black;
   border-radius: 28px;
   padding: 13px 0 27px 28px;
@@ -204,7 +204,7 @@
       font-weight: 600;
     }
     img {
-      width: 9px;
+      width: 7px;
     }
   }
   .mainText {
